## Process this file with automake to produce Makefile.in

charactersdatadir	= $(pkgdatadir)/characters
charactersdata_DATA	= BENCEDATA.DAT   DESCANTDATA.DAT.pl STAFF.DAT ZOLIDATA.DAT \
BENCEDATA.DAT.pl  MACIDATA.DAT        ULMARDATA.DAT     ZOLIDATA.DAT.pl \
CUMIDATA.DAT      MACIDATA.DAT.pl     ULMARDATA.DAT.pl \
CUMIDATA.DAT.pl   SIRPIDATA.DAT       UPIDATA.DAT \
DESCANTDATA.DAT   SIRPIDATA.DAT.pl    UPIDATA.DAT.pl \
GRIZLIDATA.DAT    GRIZLIDATA.DAT.pl

EXTRA_DIST = $(charactersdata_DATA)
