## Process this file with automake to produce Makefile.in

charactersdatadir	= $(pkgdatadir)/characters
charactersdata_DATA	= \
Agent.dat        Cumi.pl           Jacint.dat.txt   Macy.jpg          \
Agent.dat.txt    Dani.dat          Jacint.icon.png  Macy.pl           \
Agent.full.png   Dani.dat.txt      Jacint.pl        Misi.full.png     \
Agent.icon.png   Dani.full.png     Jozsi.dat        Misi.icon.png     \
Agent.jpg        Dani.icon.png     Jozsi.dat.txt    Misi.jpg          Ulmar.dat \
Agent.pl         Dani.jpg          Jozsi.icon.png   Mrsmith.dat       Ulmar.dat.txt \
Ambrus.dat       Dani.pl           Jozsi.pl         Mrsmith.dat.txt   Ulmar.full.png \
Ambrus.dat.txt   Descant.dat       Judy.dat         Mrsmith.icon.png  Ulmar.icon.png \
Ambrus.full.png  Descant.dat.txt   Judy.dat.txt     Mrsmith.pl        Ulmar.jpg \
Ambrus.icon.png  Descant.full.png  Judy.full.png    Sirpi.dat         Ulmar.pl \
Ambrus.jpg       Descant.icon.png  Judy.icon.png    Sirpi.dat.txt     UPi.dat \
Ambrus.pl        Descant.jpg       Judy.jpg         Sirpi.full.png    UPi.dat.txt \
Bence.dat        Descant.pl        Judy.pl          Sirpi.icon.png    UPi.full.png \
Bence.dat.txt    Elf.full.png      Kinga.dat        Sirpi.jpg         UPi.icon.png \
Bence.full.png   Elf.icon.png      Kinga.dat.txt    Sirpi.pl          UPi.jpg \
Bence.icon.png   Elf.jpg           Kinga.full.png   Sleepy.dat        UPi.pl \
Bence.jpg        Grizli.dat        Kinga.icon.png   Sleepy.dat.txt    Zoli.dat \
Bence.pl         Grizli.dat.txt    Kinga.jpg        Sleepy.icon.png   Zoli.dat.txt \
Cumi.dat         Grizli.full.png   Kinga.pl         Sleepy.pl         Zoli.full.png \
Cumi.dat.txt     Grizli.icon.png   Macy.dat         staff.dat         Zoli.icon.png \
Cumi.full.png    Grizli.jpg        Macy.dat.txt     Surba.full.png    Zoli.jpg \
Cumi.icon.png    Grizli.pl         Macy.full.png    Surba.icon.png    Zoli.pl \
Cumi.jpg         Jacint.dat        Macy.icon.png    Surba.jpg

EXTRA_DIST = $(charactersdata_DATA)
