## Process this file with automake to produce Makefile.in

fontsdatadir	= $(pkgdatadir)/fonts
fontsdata_DATA	= \
aardvark.ttf bradybun.ttf deadgrit.ttf thin.ttf \
brandybun3.png glossyfont.png CreditsFont2.png \
fangfont.png gooddogc.ttf impactfont2.png \
manslem.ttf

EXTRA_DIST = $(fontsdata_DATA)
