## Process this file with automake to produce Makefile.in

gfxdatadir	= $(pkgdatadir)/gfx
gfxdata_DATA	= \
Credits.png       icon.png           \
level1.png        level3_sky.png     level4_rock.png \
Doodads.png       level2.png         level4.desc        level4_saturn.png  Mortal.png \
FighterStats.png  level3_city.png    level4_earth.png   level5.png         PlayerSelect.png \
Foot.png          level3.desc        level4_ground.png  level6.png         Story1.png \
GameOver.png      level3_ground.png  level4_moon.png    Story2.png \
icon.bmp          level3_moon.png    level4_nebula.png  PlayerSelect_chat.png \
level7_cumi.png  level7_ground1.png  level7_ground3.png  level7_logo.png  level7_upi.png \
level7.desc      level7_ground2.png  level7_ground4.png  level7_sky.png   level8.png


EXTRA_DIST = $(gfxdata_DATA)
