## Process this file with automake to produce Makefile.in

gfxdatadir	= $(pkgdatadir)/gfx
gfxdata_DATA	= \
Credits.png         level10_hill.png   level4.desc        level7_cumi.png     level8.png              \
Doodads.png         level10_sky.png    level4_earth.png   level7.desc         level9.png              \
FighterStats.png    level1.png         level4_ground.png  level7_ground1.png  Makefile.am             \
Foot.png            level2.png         level4_moon.png    level7_ground2.png  Makefile.in             \
GameOver.png        level3_city.png    level4_nebula.png  level7_ground3.png  Mortal.png              \
icon.bmp            level3.desc        level4_rock.png    level7_ground4.png  PlayerSelect_chat.png   \
icon.png            level3_ground.png  level4_saturn.png  level7_logo.png     PlayerSelect.png        \
level10.desc        level3_moon.png    level5.png         level7_sky.png      Story1.png              


EXTRA_DIST = $(gfxdata_DATA)
