## Process this file with automake to produce Makefile.in

gfxdatadir	= $(pkgdatadir)/gfx
gfxdata_DATA	= \
Credits.jpg         level3_ground.png       level7_cumi.png \
Doodads.png         level3_moon.png         level7.desc \
FighterStats.jpg    level3_sky.png          level7_ground1.png \
Foot.jpg            level4.desc             level7_ground2.png \
Foot.mask.png       level4_earth.jpg        level7_ground3.png \
GameOver.jpg        level4_earth.mask.png   level7_ground4.png \
icon.bmp            level4_ground.jpg       level7_logo.png \
icon.png            level4_ground.mask.png  level7_sky.png \
level10.desc        level4_moon.jpg         level7_upi.png \
level10_ground.png  level4_moon.mask.png    level8.jpg \
level10_hill.png    level4_nebula.jpg       level9.jpg \
level10_sky.png     level4_rock.jpg         Mortal-en.jpg \
level11.jpg         level4_rock.mask.png    Mortal.jpg \
level1.jpg          level4_saturn.jpg       Story1.jpg \
level2.jpg          level4_saturn.mask.png  Story2.jpg \
level3_city.png     level5.jpg              eu.jpg\
level3.desc         level6.jpg              level12.desc \
level12_layer_3.gif level12_layer_4.gif     level12_layer_5.gif \
level12_path_after.gif level12_path.png     level12_sky.png



EXTRA_DIST = $(gfxdata_DATA)
