## Process this file with automake to produce Makefile.in

scriptdatadir	= $(pkgdatadir)/script
scriptdata_DATA	= \
Backend.pl    Damage.pl      Fighter.pl       Ulmar.pl \
Bence.pl      DataHelper.pl  FighterStats.pl  PlayerInput.pl  UPi.pl \
Collision.pl  Descant.pl     Kolos.pl         QuickSave.pl \
Cumi.pl       Doodad.pl      Maci.pl          Sirpi.pl        Zoli.pl \
Keys.pl       State.pl       Grizli.pl

EXTRA_DIST = $(scriptdata_DATA)
