## Process this file with automake to produce Makefile.in

scriptdatadir	= $(pkgdatadir)/script
scriptdata_DATA	= \
Backend.pl    Damage.pl      Doodad.pl   FighterStats.hu  Keys.pl         State.pl \
Collision.pl  DataHelper.pl  Fighter.pl  FighterStats.pl  PlayerInput.pl  Translate.pl

EXTRA_DIST = $(scriptdata_DATA)
