## Process this file with automake to produce Makefile.in

scriptdatadir	= $(pkgdatadir)/script
scriptdata_DATA	= \
Backend.pl         Collision.pl   Doodad.pl        Keys.pl         Rewind.pl    \
CollectedStats.pl  Damage.pl      Fighter.pl       PlayerInput.pl  State.pl     \
CollectStats.pl    DataHelper.pl  FighterStats.pl  QuickSave.pl    Translate.pl


EXTRA_DIST = $(scriptdata_DATA)
