## Process this file with automake to produce Makefile.in

sounddatadir	= $(pkgdatadir)/sound
sounddata_DATA	= \
2nd_pm.s3m         Last_Ninja_-_The_Wilderness.mid  splat.wav          \
alarm.voc          machine_start.voc                strange_button.voc \
aroooga.voc        magic.voc                        strange_quack.voc  \
ba_gooock.voc      moo2.voc                         thump3.voc         \
bowling.voc        pop.voc                          thump.voc          \
car_start.voc      shades_rollup.voc                thump.wav          \
crashhh.voc        slip4.voc                        woman_screams.voc  \
ding.voc           splat2.voc                       woosh.voc          \
evil_laughter.voc  splat_.voc                       woosh.wav

EXTRA_DIST = $(sounddata_DATA)
