## Process this file with automake to produce Makefile.in

sounddatadir	= $(pkgdatadir)/sound
sounddata_DATA	= \
2nd_pm.s3m     crashhh.voc        pop.voc            splat_.voc          thump.wav         \
alarm.voc      ding.voc           pop.wav            splat.wav           woman_screams.voc \
aroooga.voc    evil_laughter.voc  ride.mod           strange_button.voc  woosh.voc         \
ba_gooock.voc  machine_start.voc  shades_rollup.voc  strange_quack.voc   woosh.wav         \
bowling.voc    magic.voc          slip4.voc          thump3.voc                            \
car_start.voc  moo2.voc           splat2.voc         thump.voc

EXTRA_DIST = $(sounddata_DATA)
